# calculate

./: README.md  calculate.py  pyproject.toml  test_calculate.py
