[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "My project with autotests"
authors = ["margologu"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
